Fix chart spacing

--- a/cmd/webserver/templates/group.gohtml
+++ b/cmd/webserver/templates/group.gohtml
@@ -42,7 +42,7 @@
 
                 <div class="card mb-4">
                     <h5 class="card-header">Members</h5>
-                    <div class="card-body pb-0">
+                    <div class="card-body">
                         <div id="group-chart"></div>
                     </div>
                 </div>
