--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -270,7 +270,7 @@
                     <div class="tab-pane" id="prices" role="tabpanel">
 
                         <div class="card mb-4">
-                            <div class="card-body pb-0 pl-0">
+                            <div class="card-body">
                                 <div id="prices-chart" data-ajax="/games/{{ .App.ID }}/prices.json">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
@@ -414,7 +414,7 @@
 
                         <div class="card mb-4">
                             <h5 class="card-header">Player Count - 1 Week</h5>
-                            <div class="card-body pb-0 pl-0">
+                            <div class="card-body">
                                 <div class="player-chart" id="players-chart">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
@@ -423,7 +423,7 @@
 
                         <div class="card mb-4">
                             <h5 class="card-header">Player Count</h5>
-                            <div class="card-body pb-0 pl-0">
+                            <div class="card-body">
                                 <div class="player-chart" id="players-chart2">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
@@ -432,7 +432,7 @@
 
                         <div class="card mb-4">
                             <h5 class="card-header">Player Heatmap - 28 Day Average</h5>
-                            <div class="card-body pb-0 pl-0">
+                            <div class="card-body">
                                 <div class="player-chart" id="players-heatmap-chart">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
@@ -443,7 +443,7 @@
 
                             <div class="card mb-4">
                                 <h5 class="card-header" id="followers">Followers</h5>
-                                <div class="card-body pb-0 pl-0">
+                                <div class="card-body">
                                     <div class="player-chart" id="group-chart">
                                         <i class="fas fa-spinner fa-spin"></i>
                                     </div>
@@ -454,7 +454,7 @@
 
                         <div class="card mb-4">
                             <h5 class="card-header">Wishlists</h5>
-                            <div class="card-body pb-0 pl-0">
+                            <div class="card-body">
                                 <div class="player-chart" id="wishlists-chart">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
@@ -788,7 +788,7 @@
                         </div>
 
                         <div class="card mb-4">
-                            <div class="card-body pb-0 pl-0">
+                            <div class="card-body">
                                 <div id="reviews-chart" class="mb-2">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
