--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -225,7 +225,7 @@
                             <a class="dropdown-item" href="/contact">Contact</a>
                             <a class="dropdown-item" href="/info">Info</a>
                             {{/*<a class="dropdown-item" href="https://twitter.com/gamedbonline" target="_blank" rel="noopener">Twitter <i class="fas fa-external-link-alt"></i></a>*/}}
-                            <a class="dropdown-item" href="/api/steam">API</a>
+                            <a class="dropdown-item" href="/api/gamedb">API</a>
 
                         </div>
                     </li>
