--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -5,11 +5,9 @@
 
         <div class="jumbotron">
 
-            <h1><i class="fas fa-cloud-download-alt"></i> {{ .TitleOnly }}</h1>
-            <p class="lead">The API is built with <a target="_blank" rel="noopener" href="/api/openapi.json">Open API</a> so you can generate api clients in your language.</p>
+            <h1><i class="fas fa-book-reader"></i> {{ .TitleOnly }}</h1>
             <div>
-                <small>If you need anything that is not in the API yet, please <a href="/contact">contact</a> me.</small>
-                <small>For the Steam API, click <a href="/steam-api">here</a>.</small>
+                <small>If you need anything that is not in the Game DB API yet, please <a href="/contact">contact</a> me.</small>
             </div>
 
         </div>
