--- a/cmd/webserver/templates/bundle.gohtml
+++ b/cmd/webserver/templates/bundle.gohtml
@@ -47,7 +47,12 @@
                     </table>
                 </div>
 
-                <div id="prices-chart" class="mt-3"></div>
+                <div class="card mb-3">
+                    <h5 class="card-header">Prices</h5>
+                    <div class="card-body">
+                        <div id="prices-chart"></div>
+                    </div>
+                </div>
 
                 {{if gt (len .Packages) 0}}
 
