--- a/cmd/webserver/templates/stats-gamedb.gohtml
+++ b/cmd/webserver/templates/stats-gamedb.gohtml
@@ -35,12 +35,16 @@
                     </div>
                 </div>
 
-                <h5 class="clearfix">
-                    <span>Player Levels <small>(For levels below 2,000)</small></span>
-                    <small class="float-right">See <a href="/experience">Experience</a> for more!</small>
-                </h5>
-                <div class="chart" id="player-levels">
-                    <i class="fas fa-spinner fa-spin"></i>
+                <div class="card mb-4">
+                    <h5 class="card-header">
+                        <span>Player Levels <small>(For levels below 2,000)</small></span>
+                        <small class="float-right">See <a href="/experience">Experience</a> for more!</small>
+                    </h5>
+                    <div class="card-body">
+                        <div class="chart" id="player-levels">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+                    </div>
                 </div>
 
             </div>
