--- a/cmd/webserver/templates/package.gohtml
+++ b/cmd/webserver/templates/package.gohtml
@@ -195,8 +195,13 @@
                     {{/* Prices */}}
                     <div class="tab-pane" id="prices" role="tabpanel">
 
-                        <div id="prices-chart" data-ajax="/packages/{{ .Package.ID }}/prices.json">
-                            <i class="fas fa-spinner fa-spin"></i>
+                        <div class="card mb-4">
+                            <h5 class="card-header">Prices</h5>
+                            <div class="card-body">
+                                <div id="prices-chart" data-ajax="/packages/{{ .Package.ID }}/prices.json">
+                                    <i class="fas fa-spinner fa-spin"></i>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="table-responsive">
