--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -31,24 +31,40 @@
                     </div>
                 </div>
 
-                <h5>Players Online <small>({{ round64 .SteamPlayersOnline }}, {{ round64 .SteamPlayersInGame }} in game)</small></h5>
-                <div class="chart" id="client-players">
-                    <i class="fas fa-spinner fa-spin"></i>
+                <div class="card mb-4">
+                    <h5 class="card-header">Players Online <small>({{ round64 .SteamPlayersOnline }}, {{ round64 .SteamPlayersInGame }} in game)</small></h5>
+                    <div class="card-body">
+                        <div class="chart" id="client-players">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+                    </div>
                 </div>
 
-                <h5>Players Online <small>(5 years)</small></h5>
-                <div class="chart" id="client-players2">
-                    <i class="fas fa-spinner fa-spin"></i>
+                <div class="card mb-4">
+                    <h5 class="card-header">Players Online <small>(5 years)</small></h5>
+                    <div class="card-body">
+                        <div class="chart" id="client-players2">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+                    </div>
                 </div>
 
-                <h5>App Scores</h5>
-                <div class="chart" id="scores">
-                    <i class="fas fa-spinner fa-spin"></i>
+                <div class="card mb-4">
+                    <h5 class="card-header">App Scores</h5>
+                    <div class="card-body">
+                        <div class="chart" id="scores">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+                    </div>
                 </div>
 
-                <h5>App Release Dates</h5>
-                <div class="chart" id="release-dates">
-                    <i class="fas fa-spinner fa-spin"></i>
+                <div class="card mb-4">
+                    <h5 class="card-header">App Release Dates</h5>
+                    <div class="card-body">
+                        <div class="chart" id="release-dates">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <h5>App Types</h5>
