--- a/cmd/webserver/templates/stats-gamedb.gohtml
+++ b/cmd/webserver/templates/stats-gamedb.gohtml
@@ -35,7 +35,7 @@
                     </div>
                 </div>
 
-                <div class="card mb-4">
+                <div class="card">
                     <h5 class="card-header">
                         <span>Player Levels <small>(For levels below 2,000)</small></span>
                         <small class="float-right">See <a href="/experience">Experience</a> for more!</small>
