--- a/cmd/webserver/templates/group.gohtml
+++ b/cmd/webserver/templates/group.gohtml
@@ -53,12 +53,13 @@
                 </div>
 
                 <h5>Game DB Members</h5>
-                <table class="table table-hover table-striped table-counts mb-0" data-path="/groups/{{ .Group.ID }}/table.json" id="players" data-row-type="players" data-ordering="false">
+                <table class="table table-hover table-striped table-counts mb-0" data-path="/groups/{{ .Group.ID }}/table.json" id="players" data-row-type="players">
                     <thead class="thead-light">
                     <tr>
                         <th class="thin">Flag</th>
                         <th>Player</th>
                         <th>Level</th>
+                        <th>Games</th>
                         <th class="thin"></th>
                     </tr>
                     </thead>
