Improve home links

--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -96,7 +96,7 @@
                     <div class="card-body">
                         Coming Soon
                     </div>
-{{/*                    <a class="card-footer" href="https://twitter.com/gamedbonline" target="_blank" rel="noopener">@gamedbonline</a>*/}}
+                    {{/*<a class="card-footer" href="https://twitter.com/gamedbonline" target="_blank" rel="noopener">@gamedbonline</a>*/}}
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-xl-3">
@@ -114,7 +114,7 @@
                             {{ end }}
                         </div>
                     </div>
-                    <a class="card-footer text-center" href="/games">More</a>
+                    <a class="card-footer text-center" href="/games">More Games</a>
                 </div>
 
             </div>
@@ -133,7 +133,7 @@
                             {{ end }}
                         </div>
                     </div>
-                    <a class="card-footer text-center" href="/games/new-releases">More</a>
+                    <a class="card-footer text-center" href="/games/new-releases">More Releases</a>
                 </div>
 
             </div>
