Show player countries chart

--- a/cmd/webserver/assets/sass/_stats.scss
+++ b/cmd/webserver/assets/sass/_stats.scss
@@ -13,4 +13,9 @@
       cursor: ew-resize;
     }
   }
+
+  .highcharts-drilldown-axis-label {
+    color: #28a745 !important;
+    fill: #28a745 !important;
+  }
 }
