--- a/cmd/webserver/templates/stats-gamedb.gohtml
+++ b/cmd/webserver/templates/stats-gamedb.gohtml
@@ -35,13 +35,25 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card mb-3">
                     <h5 class="card-header">
                         <span>Player Levels <small>(For levels below 2,000)</small></span>
                         <small class="float-right">See <a href="/experience">Experience</a> for more!</small>
                     </h5>
                     <div class="card-body">
                         <div class="chart" id="player-levels">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h5 class="card-header">
+                        <span>Player Countries <small>(Top 40)</small></span>
+                        <small class="float-right">Click a bar to see states</small>
+                    </h5>
+                    <div class="card-body">
+                        <div class="chart" id="player-countries">
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
                     </div>
