--- a/cmd/webserver/templates/apps_compare.gohtml
+++ b/cmd/webserver/templates/apps_compare.gohtml
@@ -114,6 +114,15 @@
                     </div>
 
                     <div class="card mb-4">
+                        <h5 class="card-header">Price</h5>
+                        <div class="card-body">
+                            <div id="price-chart">
+                                <i class="fas fa-spinner fa-spin"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-4">
                         <h5 class="card-header">Wishlists</h5>
                         <div class="card-body">
                             <div id="wishlists-chart">
