--- a/cmd/webserver/templates/_footer.gohtml
+++ b/cmd/webserver/templates/_footer.gohtml
@@ -6,9 +6,9 @@
                 Game DB is not affiliated with Steam.
                 All copyrights reserved to their respective owners.
                 <a href="/terms">Terms of Service</a>.
-                Version <a href="/commits">{{ .GetVersionHash }}</a>.
+                Version <a href="/commits">{{ .GetCommits }}</a>.
                 <br>
-                {{/*                <a href="https://twitter.com/gamedbonline" target="_blank" rel="noopener"><i class="fab fa-twitter"></i> Twitter</a> -*/}}
+                {{/*<a href="https://twitter.com/gamedbonline" target="_blank" rel="noopener"><i class="fab fa-twitter"></i> Twitter</a> -*/}}
                 <a href="https://github.com/gamedb" target="_blank" rel="noopener"><i class="fab fa-github"></i> GitHub</a> -
                 <a href="https://www.patreon.com/jleagle" target="_blank" rel="noopener"><i class="fab fa-patreon"></i> Patreon</a>
             </small>
