--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -89,9 +89,9 @@
     <i class="fas fa-level-up-alt"></i>
 </div>
 
-<div id="loading" title="Loading" class="rounded">
-    <img src="/assets/img/sa-500x500.png" alt="Loading">
-</div>
+{{/*<div id="loading" title="Loading" class="rounded">*/}}
+{{/*    <img src="/assets/img/sa-500x500.png" alt="Loading">*/}}
+{{/*</div>*/}}
 
 {{ if eq .Env "local" }}
     <div id="sizes">
