--- a/cmd/webserver/templates/commits.gohtml
+++ b/cmd/webserver/templates/commits.gohtml
@@ -20,6 +20,7 @@
                             <th scope="col">Message</th>
                             <th scope="col">Time</th>
                             <th scope="col">Hash</th>
+                            <th scope="col">Commit</th>
                             <th scope="col">Live</th>
                         </tr>
                         </thead>
