--- a/cmd/webserver/templates/_footer.gohtml
+++ b/cmd/webserver/templates/_footer.gohtml
@@ -6,7 +6,7 @@
                 Game DB is not affiliated with Steam.
                 All copyrights reserved to their respective owners.
                 <a href="/terms">Terms of Service</a>.
-                Version <a href="/commits">{{ .GetCommits }}</a>.
+                Version <a href="/commits">{{ .GetCommits }} Beta</a>.
                 <br>
                 {{/*<a href="https://twitter.com/gamedbonline" target="_blank" rel="noopener"><i class="fab fa-twitter"></i> Twitter</a> -*/}}
                 <a href="https://github.com/gamedb" target="_blank" rel="noopener"><i class="fab fa-github"></i> GitHub</a> -
