--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -432,32 +432,36 @@
                             </div>
                         </div>
 
-                        <div class="card mb-4">
-                            <h5 class="card-header">Player Count - 1 Week</h5>
-                            <div class="card-body">
-                                <div class="player-chart" id="players-chart">
-                                    <i class="fas fa-spinner fa-spin"></i>
-                                </div>
-                            </div>
-                        </div>
+                        {{ if gt .App.PlayerPeakAllTime 0 }}
 
-                        <div class="card mb-4">
-                            <h5 class="card-header">Player Count</h5>
-                            <div class="card-body">
-                                <div class="player-chart" id="players-chart2">
-                                    <i class="fas fa-spinner fa-spin"></i>
+                            <div class="card mb-4">
+                                <h5 class="card-header">Player Count - 1 Week</h5>
+                                <div class="card-body">
+                                    <div class="player-chart" id="players-chart">
+                                        <i class="fas fa-spinner fa-spin"></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="card mb-4">
-                            <h5 class="card-header">Player Heatmap - 28 Day Average</h5>
-                            <div class="card-body">
-                                <div class="player-chart" id="players-heatmap-chart">
-                                    <i class="fas fa-spinner fa-spin"></i>
+                            <div class="card mb-4">
+                                <h5 class="card-header">Player Count</h5>
+                                <div class="card-body">
+                                    <div class="player-chart" id="players-chart2">
+                                        <i class="fas fa-spinner fa-spin"></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+
+                            <div class="card mb-4">
+                                <h5 class="card-header">Player Heatmap - 28 Day Average</h5>
+                                <div class="card-body">
+                                    <div class="player-chart" id="players-heatmap-chart">
+                                        <i class="fas fa-spinner fa-spin"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                        {{ end }}
 
                         {{ if ne .App.GroupID "" }}
 
