Update delay table

--- a/cmd/webserver/templates/admin/delays.gohtml
+++ b/cmd/webserver/templates/admin/delays.gohtml
@@ -13,11 +13,11 @@
                     <table class="table table-hover table-striped table-counts" data-row-type="users" data-path="/admin/delays.json">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col">First Seen</th>
-                            <th scope="col">Last Seen</th>
+                            {{/*<th scope="col">First Seen</th>*/}}
                             <th scope="col">Queue</th>
+                            <th scope="col">Updated</th>
                             <th scope="col">Attempt</th>
-                            {{/*<th scope="col">Message</th>*/}}
+                            <th scope="col">Message</th>
                         </tr>
                         </thead>
                         <tbody>
