Update delays table

--- a/cmd/webserver/templates/admin/delays.gohtml
+++ b/cmd/webserver/templates/admin/delays.gohtml
@@ -14,9 +14,9 @@
                         <thead class="thead-light">
                         <tr>
                             {{/*<th scope="col">First Seen</th>*/}}
-                            <th scope="col">Queue</th>
-                            <th scope="col">Updated</th>
-                            <th scope="col">Attempt</th>
+                            <th scope="col" class="thin">Updated</th>
+                            <th scope="col" class="thin">Queue</th>
+                            <th scope="col" class="thin">Attempt</th>
                             <th scope="col">Message</th>
                         </tr>
                         </thead>
