Show twitter links

--- a/cmd/frontend/templates/_footer.gohtml
+++ b/cmd/frontend/templates/_footer.gohtml
@@ -8,7 +8,7 @@
                 <a href="/terms">Terms of Service</a>.
                 Version <a href="/commits">{{ .GetCommits }} Beta</a>.
                 <br>
-                {{/*<a href="https://twitter.com/gamedbonline" target="_blank" rel="noopener"><i class="fab fa-twitter"></i> Twitter</a> -*/}}
+                <a href="https://twitter.com/gamedb_online" target="_blank" rel="noopener"><i class="fab fa-twitter"></i> Twitter</a> -
                 <a href="https://github.com/gamedb" target="_blank" rel="noopener"><i class="fab fa-github"></i> GitHub</a> -
                 <a href="https://www.patreon.com/jleagle" target="_blank" rel="noopener"><i class="fab fa-patreon"></i> Patreon</a>
             </small>
