--- a/cmd/frontend/templates/_header.gohtml
+++ b/cmd/frontend/templates/_header.gohtml
@@ -50,7 +50,7 @@
 
     {{/* Twitter */}}
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@gamedbonline"/>
+    <meta name="twitter:site" content="@gamedb_online"/>
     <meta name="twitter:title" content="{{ .Title }}">
     <meta name="twitter:description" content="{{ .Description }}">
     <meta name="twitter:image" content="{{ .GetMetaImage }}"/>
@@ -224,7 +224,7 @@
                             <a class="dropdown-item" href="/achievements">Achievements Search</a>
                             <a class="dropdown-item" href="/contact">Contact</a>
                             <a class="dropdown-item" href="/info">Info</a>
-                            {{/*<a class="dropdown-item" href="https://twitter.com/gamedbonline" target="_blank" rel="noopener">Twitter <i class="fas fa-external-link-alt"></i></a>*/}}
+                            <a class="dropdown-item" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener">Twitter <i class="fas fa-external-link-alt"></i></a>
                             <a class="dropdown-item" href="/api/gamedb">API</a>
 
                         </div>
