--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -92,11 +92,11 @@
             <div class="col-12 col-lg-4">
 
                 <div class="card mb-4" id="tweets">
-                    <h5 class="card-header">News {{/*<a href="https://twitter.com/gamedbonline" target="_blank" rel="noopener"><i class="fab fa-twitter float-right"></i></a>*/}}</h5>
+                    <h5 class="card-header">News <a href="https://twitter.com/gamedb_online" target="_blank" rel="noopener"><i class="fab fa-twitter float-right"></i></a></h5>
                     <div class="card-body">
                         Coming Soon
                     </div>
-                    {{/*<a class="card-footer" href="https://twitter.com/gamedbonline" target="_blank" rel="noopener">@gamedbonline</a>*/}}
+                    <a class="card-footer" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener">@gamedb_online</a>
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-xl-3">
